# dissect.target

./: .git-blame-ignore-revs  .gitattributes  .gitignore  COPYRIGHT  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py  test_ignore_regback.py  tox.ini
.github/: pull_request_template.md
.github/workflows/: dissect-ci.yml  on-demand-test.yml
autocompletion/: target_bash_completion.sh
tests/: _utils.py  conftest.py  test_container.py  test_container_open.py  test_containers_split.py  test_exceptions.py  test_filesystem.py  test_filesystems_cb.py  test_filesystems_config.py  test_filesystems_dir.py  test_filesystems_exfat.py  test_filesystems_ntfs.py  test_filesystems_smb.py  test_filesystems_tar.py  test_filesystems_zip.py  test_hashing.py  test_helpers.py  test_helpers_cache.py  test_helpers_config.py  test_helpers_configparser.py  test_helpers_configutil.py  test_helpers_docs.py  test_helpers_fsutil.py  test_helpers_hashutil.py  test_helpers_keychain.py  test_helpers_loaderutil.py  test_helpers_localeutil.py  test_helpers_regutil.py  test_helpers_utils.py  test_loader.py  test_loaders_asdf.py  test_loaders_cb.py  test_loaders_dir.py  test_loaders_hyperv.py  test_loaders_kape.py  test_loaders_local.py  test_loaders_log.py  test_loaders_multiraw.py  test_loaders_ova.py  test_loaders_ovf.py  (+151 more)
tests/_data/: unicode.tgz
tests/_data/containers/ewf/: small.E01  split.E01  split.E02  splitted.E01  splitted.E02
tests/_data/containers/qcow2/: small.qcow2
tests/_data/containers/raw/: small.txt
tests/_data/containers/vmdk/: small.vmdk
tests/_data/filesystems/: filesystem.ext4  symlink_disk.ext4
tests/_data/filesystems/ad1/: encrypted-small.ad1  encrypted-small.ad1.csv  encrypted-small.ad1.txt  encrypted-small.ad2  encrypted-small.ad3
tests/_data/filesystems/cpio/: initrd.img-6.1.0-17-amd64
tests/_data/filesystems/squashfs/: gzip-opts.sqfs  gzip.sqfs  lz4.sqfs  lzma.sqfs  lzo.sqfs  xz.sqfs  zstd.sqfs
tests/_data/filesystems/vmtar/: esxi9_zstd_intelgpi.v00  simple.vmtar
tests/_data/helpers/configutil/: config  env  hosts  hosts.allow  hosts.deny  resolv.conf  sshd_config  systemd.syntax  test.xml
tests/_data/helpers/keychain/: keychain.csv
tests/_data/helpers/regutil/: regflex.reg
tests/_data/loaders/ab/: test.ab
tests/_data/loaders/acquire/: test-anon-filesystems.tar  test-windows-fs-c-absolute.tar  (+4 more)
tests/_data/registration/: container.py  filesystem.py  loader.py  plugin.py
tests/_docs/: Makefile  conf.py
tests/containers/: test_asif.py  test_ewf.py  test_fortifw.py  test_qcow2.py  test_raw.py  test_split.py  test_vdi.py  test_vhd.py  test_vhdx.py  test_vmdk.py  test_windows_drive.py
tests/data/: TestAnydesk.trace  TestLog.evt  amcache-old.hve  chrome-history.sqlite  chromium-history-win.sqlite  defender-operational.evtx  edge-history.sqlite  firefox-places.sqlite  keychain.csv  mft.raw  test-acquire-handles.tar  test-windows-sysvol-relative.tar  wpndatabase.db
tests/data/clfs/: DRIVERS{53b39e70-18c4-11ea-a811-000d3aa4692b}.TM.blf  DRIVERS{53b39e70-18c4-11ea-a811-000d3aa4692b}.TMContainer00000000000000000001.regtrans-ms
tests/data/config_tree/: config  config.ini  systemd.service
tests/data/plugin_register/: container.py  filesystem.py  loader.py
tests/data/ual/: Current.mdb  SystemIdentity.mdb
tests/data/unix-logs/: atop  btmp  passwd_syslog
tests/data/wer/: wer_test.tmp.WERInternalMetadata.xml  wer_test.wer
tests/docs/: conf.py
tests/filesystems/: test_ad1.py  test_adb.py  test_apfs.py  test_btrfs.py  test_cb.py  test_config.py  test_containerimage.py  test_cpio.py  test_cramfs.py  test_dir.py  test_exfat.py  test_extfs.py  test_fat.py  test_fatx.py  test_ffs.py  test_jffs2.py  test_nc.py  test_nfs.py  test_ntds.py  test_ntfs.py  test_overlay.py  test_qnxfs.py  test_shell.py  test_smb.py  test_squashfs.py  test_ssh.py  test_tar.py  test_vmtar.py  test_xfs.py  test_zip.py
tests/helpers/: test_cache.py  test_completer.py  test_config.py  test_configutil.py  test_docs.py  test_fscrypt.py  test_fsutil.py  test_hashutil.py  test_keychain.py  test_lazy.py  test_loaderutil.py  test_localeutil.py  test_magic.py  test_modifier.py  test_network.py  test_protobuf.py  test_record.py  test_regex.py  test_regutil.py  test_scrape.py  test_utils.py
tests/helpers/esxi/: test_hash.py
tests/helpers/sunrpc/: test_client.py
tests/loaders/: test_ab.py  test_acquire.py  test_ad1.py  test_adb.py  test_asdf.py  test_cb.py  test_cellebrite.py  test_compression.py  test_containerimage.py  test_cpio.py  test_cyber.py  test_dem.py  test_dir.py  test_direct.py  test_esxivmsupport.py  test_hyperv.py  test_itunes.py  test_kape.py  test_libvirt.py  test_local.py  test_log.py  test_mqtt.py  test_multiraw.py  test_nc.py  test_nscollector.py  test_ova.py  test_overlay.py  test_overlay2.py  test_ovf.py  test_phobos.py  test_pvm.py  test_pvs.py  test_remote.py  test_scrape.py  test_single.py  test_smb.py  test_ssh.py  test_surge.py  test_tanium.py  test_tar.py  (+10 more)
tests/plugin_register/: container.py  filesystem.py  loader.py
tests/plugins/child/: test_colima.py  test_docker.py  test_esxi.py  test_hyperv.py  test_lima.py  test_parallels.py  test_podman.py  test_proxmox.py  test_qemu.py  test_virtualbox.py  test_virtuozzo.py  test_vmware_workstation.py  test_wsl.py
tests/plugins/filesystem/: test_acquire_handles.py  test_acquire_hash.py  test_icat.py  test_ini.py  test_mywalkfs.py  test_resolver.py  test_uuid.py  test_walkfs.py  test_yara.py
tests/plugins/general/: test_config.py  test_default.py  test_network.py  test_osinfo.py  test_plugins.py  test_users.py
tests/plugins/hypervisor/: test_hyperv.py
tests/plugins/scrape/: test_qfind.py  test_scrape.py
tests/tools/: conftest.py  test_build_pluginlist.py  test_diff.py  test_dump.py  test_fs.py  test_fsutils.py  test_info.py  test_mount.py  test_qfind.py  test_query.py  test_reg.py  test_report.py  test_shell.py  test_utils.py  test_yara.py
tests/tools/utils/: test_cli.py  test_completer.py  test_fs.py  test_report.py
tests/volumes/: test_bde.py  test_md.py  test_veracrypt.py  test_xbox.py
(+880 files in other folders)
